--- a/travis.TEMPLATE.yml
+++ b/travis.TEMPLATE.yml
@@ -6,7 +6,7 @@ os:
 dist: trusty
 addons:
   apt:
-    packages:
+    packages: # Update dependencies on linux if in travis apt whitelist
       - libboost-test-dev
       - libboost-system-dev
       - libboost-thread-dev
@@ -20,12 +20,16 @@ branches:
 compiler:
   - gcc
 before_install:
+  - git submodule --quiet update --init
   - export ROOT_DIR=`pwd`
   - export DEVEL_DIR="$ROOT_DIR/_travis"
   - export TRAVIS_SUBMODULE="$ROOT_DIR/.travis-submodule"        # Update this if you didn't use .travis-submodule
+
+  - export APT_PACKAGES=""                                       # Install packages on linux.
+  - export BREW_PACKAGES=""                                      # Install packages on OSX. (tinyxml, pkg-config and cmake are installed)
+
   - export EXTERNAL_DEPENDENCIES="doxygen libccd eigen3 octomap" # Update this, installed in this order
   - export HPP_DEPENDENCIES="hpp-util hpp-fcl"                   # Update this, installed in this order
-  - git submodule --quiet update --init
 install: ${TRAVIS_SUBMODULE}/install
 script: ${TRAVIS_SUBMODULE}/script
 after_failure: ${TRAVIS_SUBMODULE}/after_failure
